De resterende afsnit, mangler at rette henvisninger

--- a/vedtægter/vedtægter.tex
+++ b/vedtægter/vedtægter.tex
@@ -237,6 +237,122 @@ generalforsamling.
 \end{enumerate}
 
 
+\section*{Bestyrelsens sammensætning}
+
+\begin{enumerate}[resume*=afsnit]
+
+\item Bestyrelsen består af op til 7 personer og vælges på den årlige
+generalforsamling.
+
+  \begin{stykenum}
+
+  \item Bestyrelsens medlemmer vælges for 1 år ad gangen.
+
+  \end{stykenum}
+
+\end{enumerate}
+
+
+\section*{Bestyrelsens ansvar og arbejde}
+
+\begin{enumerate}[resume*=afsnit]
+
+\item Bestyrelsen har, mellem generalforsamlingerne, ansvaret for foreningen.
+
+  \begin{stykenum}
+
+  \item Bestyrelsen leder foreningen i overensstemmelse med nærværende
+        vedtægter og generalforsamlingens beslutninger.
+
+  \item Bestyrelsen træffer beslutninger med simpelt flertal.
+
+  \item Bestyrelsen vælger imellem sig en formand og en kasserer.
+
+  \item Bestyrelsen fastsætter selv sin forretningsorden. Den kan nedsætte
+        underudvalg og arbejdsgrupper til varetagelse af afgrænsede opgaver.
+
+  \end{stykenum}
+
+\end{enumerate}
+
+
+\section*{Økonomi, regnskab og revision}
+
+\begin{enumerate}[resume*=afsnit]
+
+\item Foreningens regnskabsår følger kalenderåret.
+
+  \begin{stykenum}
+
+  \item Bestyrelsen er ansvarlig overfor generalforsamlingen for budget\\samt
+        regnskab.
+
+  \item Foreningens regnskab føres af kassereren.
+
+  \item Regnskabet revideres af de på generalforsamlingen valgte revisorer.
+
+  \end{stykenum}
+
+\end{enumerate}
+
+\section*{Tegningsregler og hæftelse}
+
+\begin{enumerate}[resume*=afsnit]
+
+\item Foreningen tegnes udadtil ved underskrift af mindst to af bestyrelsens
+medlemmer. Ved optagelse af lån og ved salg/ pantsætning af fast ejendom tegnes
+foreningen af den samlede bestyrelse.
+
+  \begin{stykenum}
+
+  \item Der påhviler ikke foreningens medlemmer nogen personlig hæftelse for de
+        forpligtelser, der påhviler foreningen.
+
+  \end{stykenum}
+
+\end{enumerate}
+
+
+\section*{Vedtægtsændringer}
+
+\begin{enumerate}[resume*=afsnit]
+
+\item Disse vedtægter kan kun ændres med 2/3 flertal på en generalforsamling,
+hvor ændringsforslaget fremgår af dagsordenen.
+
+  \begin{stykenum}
+
+  \item Ændringer i §§ 1, 2, 4, 14 og 15 kan kun vedtages med 4/5 af de
+        tilstedeværende stemmer.
+
+  \item Vedtægtsændringerne træder i kraft med virkning fra den
+        generalforsamling, de vedtages på.
+
+  \end{stykenum}
+
+\end{enumerate}
+
+
+\section*{Opløsning}
+
+\begin{enumerate}[resume*=afsnit]
+
+\item Opløsning af foreningen kan kun finde sted med 2/3 flertal på to hinanden
+følgende generalforsamlinger, hvoraf den ene skal være den årlige. Tidsrummet
+mellem de to generalforsamlinger skal være min. 1 måned.
+
+  \begin{stykenum}
+
+  \item Foreningens formue skal i tilfælde af opløsning anvendes i
+        over\-ensstemmelse med de i § 2 fastsatte formål eller skænkes til andre
+        studenterforeninger på DIKU. Beslutning om den konkrete anvendelse af
+        formuen træffes af den opløsende generalforsamling.
+
+  \end{stykenum}
+
+\end{enumerate}
+
+
 \bigskip
 
 \begin{center}
