Copy/paste fejl

--- a/vedtægter/vedtægter.tex
+++ b/vedtægter/vedtægter.tex
@@ -206,7 +206,7 @@ foreningens webside mindst en uge før generalforsamlingen.
 \end{enumerate}
 
 
-\section*{Valg til bestyrelse}
+\section*{Ekstraordinær generalforsamling}
 
 \begin{enumerate}[resume*=afsnit]
 
