Ingen grund til punktum, især ikke i en overskrift

--- a/vedtægter/vedtægter.tex
+++ b/vedtægter/vedtægter.tex
@@ -9,7 +9,7 @@
 
 \title{Vedtægter for DIKUNIX}
 \author{Datalogisk institut, Københavns Universitet}
-\date{Som vedtaget den 9. december 2016.}
+\date{Som vedtaget den 9. december 2016}
 
 
 % Palatino skrifttype
